add placeholder connection string

--- a/electric-games-dotnet-api/appsettings.json
+++ b/electric-games-dotnet-api/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "ElectricGamesDatabase": {
+    "ConnectionString": "mongodb+srv://USERNAME:PASSWORD@HOST",
+    "DatabaseName": "ElectricGamesDB",
+    "GamesCollection": "games",
+    "CharacterCollection": "characters"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
